Uniform alignment of pickers. Fix to code editor.

--- a/elements/simple-picker/src/simple-picker.css
+++ b/elements/simple-picker/src/simple-picker.css
@@ -142,10 +142,6 @@
   };
 }
 
-:host #sample simple-picker-option {
-  @apply --simple-picker-sample-option;
-}
-
 :host simple-picker-option[selected] {
   z-index: 50;
   color: var(--simple-picker-color);
@@ -164,6 +160,11 @@
 :host #sample simple-picker-option {
   color: var(--simple-picker-sample-color,  var(--simple-picker-color));
   background-color: var(--simple-picker-sample-background-color, transparent);
+  --simple-picker-option-padding: 2px 0;
+  --simple-picker-option-label: {
+    @apply --simple-picker-sample-label;
+  }
+  @apply --simple-picker-sample-option;
   border: none;
 }
 
